Fixed sun and moon peeking from behind the theme switcher (#139)
* Fixed

* Moved knob a bit down

* Revert changes

--- a/styles/_switchButton.scss
+++ b/styles/_switchButton.scss
@@ -19,7 +19,7 @@
   width: 21px !important;
   border-radius: 50%;
   position: absolute;
-  top: 1px;
+  top: 1.5px;
   transition: left 0.2s ease-in-out;
   z-index: 2;
 
